--- a/client/Booking_Page/Booking.css
+++ b/client/Booking_Page/Booking.css
@@ -1,16 +1,27 @@
-h1{
+h1 {
     color: red;
-    margin:0px;
+    margin: 0px;
 }
 
-#err_div{
+#err_div {
     width: 400px;
     height: 400px;
-    padding-top:100px;
-    margin:200px 300px;
+    padding-top: 100px;
+    margin: 200px 300px;
     border: 5px solid red;
 }
 
+.about {
+    text-align: center;
+    margin-top: 100px;
+}
+
+.linebreak {
+    height: 2px;
+    border-width: 0;
+    color: gray;
+    background-color: gray
+}
 
 #main_div {
     position: relative;
@@ -30,11 +41,19 @@ h1{
     border: 1px solid rgb(13, 14, 13);
 }
 
+#l:hover {
+    background-color: aqua;
+}
+
 #U {
     width: 50px;
     height: 50px;
     border: 1px solid rgb(13, 14, 13);
     float: left;
+}
+
+#U:hover {
+    background-color: aqua;
 }
 
 #subdiv1 {
@@ -50,8 +69,90 @@ h1{
 }
 
 #subdiv3 {
-        position: absolute;
-        width: 200px;
-        height: 120px;
-        bottom: 0;
+    position: absolute;
+    width: 200px;
+    height: 120px;
+    bottom: 0;
 }
+
+
+.busimg {
+    height: 100px;
+    padding-left: 650px;
+}
+
+
+.lgbtn:hover {
+    border-radius: 1px;
+}
+
+.container {
+    padding-left: 1000px;
+}
+
+.open-button {
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: 280px;
+  }
+  
+  /* The popup form - hidden by default */
+  .form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+  }
+  
+  /* Add styles to the form container */
+  .form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+  }
+  
+  /* Full-width input fields */
+  .form-container input[type=text], .form-container input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  /* When the inputs get focus, do something */
+  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+  
+  /* Set a style for the submit/login button */
+  .form-container .btn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+  }
+  
+  /* Add a red background color to the cancel button */
+  .form-container .cancel {
+    background-color: red;
+  }
+  
+  /* Add some hover effects to buttons */
+  .form-container .btn:hover, .open-button:hover {
+    opacity: 1;
+  }
