--- a/client/Booking_Page/Booking.css
+++ b/client/Booking_Page/Booking.css
@@ -147,6 +147,11 @@ h1 {
     opacity: 0.8;
   }
   
+#arrimg{
+    width: 70px;
+    padding: 20px;
+}
+
   /* Add a red background color to the cancel button */
   .form-container .cancel {
     background-color: red;
@@ -155,4 +160,13 @@ h1 {
   /* Add some hover effects to buttons */
   .form-container .btn:hover, .open-button:hover {
     opacity: 1;
+  }
+
+  .dinput{
+    background-color: blue;
+  }
+
+  #kms{
+    visibility: hidden;
+    background-color: gold;
   }
