--- a/client/Login/Login.css
+++ b/client/Login/Login.css
@@ -17,3 +17,12 @@
 .login_icon{
     padding-left: 200px;
 }
+
+
+.signupimg {
+    height: 100px;
+}
+
+#Signup_redirect {
+    padding-left: 400px;
+}
