--- a/client/Signup/Signup.css
+++ b/client/Signup/Signup.css
@@ -10,10 +10,10 @@
 
 /*styling the main div*/
 
-#main_div{
+#main_div {
     box-sizing: content-box;
-   padding: 50px 100px; 
-   border: 1px solid #ccc;
+    padding: 50px 100px;
+    border: 1px solid #ccc;
     border-radius: 4px;
     margin-top: 50px;
     margin-left: 30%;
@@ -24,11 +24,11 @@
 
 /* Style the submit button */
 
-button :hover{
+button :hover {
     background-color: green;
 }
 
-.btn-box{
+.btn-box {
     padding: 20px;
     margin-left: 25%;
 }
@@ -76,7 +76,11 @@ button :hover{
     content: "&#10006;";
 }
 
-.signupimg{
-height:100px;
-padding-left: 175px;
+.signupimg {
+    height: 100px;
+    padding-left: 175px;
+}
+
+#Login_redirect {
+    padding-left: 400px;
 }
